// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details route template Document details with data Check status code and snapshot should match the results screen snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template app-html-class">
  <head>
    <meta charset="utf-8">
    <title>
  Natural Capital Search Service - GOV.UK
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
  
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    


    
  <link rel="stylesheet" href="/assets/css/application.css">

    
  </head>
  <body class="govuk-template__body app-body-class">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    

    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  <header class="header-container">
    <div class="header-div-container header-main">
      <div class="site-width-container">
        <div class="header-logo-container"><img alt="Department for Environment Food &amp; Rural Affairs Logo" src="/assets/images/defra_logo.svg" width="52" height="42" decoding="async" data-nimg="1" class="defra-logo" loading="lazy" style="color:transparent">
          <a target="_blank" class="header-logo-link logo-link" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">
            <span class="defra-logo-text">Department for Environment <br> Food &amp; Rural Affairs</span></a>
          <span class="govuk-header__service-name">Natural Capital Search Service</span></div>
      </div>
    </div>
  </header>


    
  
      <div class="govuk-width-container">
        
  
  <div class="govuk-phase-banner">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      Beta
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
    </span>
  </p>
</div>



  

  
    
  

  <div class="govuk-breadcrumbs">
  <ol class="govuk-breadcrumbs__list">

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/" data-do-storage-reset="">Home</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/search">Search results</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="#">20190731 - HI1597 - Firth of Clyde - Troon to Turnberry Point - 2m - Bathymetric Survey</a>
    </li>
  

  </ol>
</div>


        <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
          
  
    
    
    
    <h1 class='govuk-heading-m details-title'>20190731 - HI1597 - Firth of Clyde - Troon to Turnberry Point - 2m - Bathymetric Survey</h1>

    <div >
      


  




  



  

  
    
  

<button type="submit" class="govuk-button govuk-!-margin-bottom-4" data-module="govuk-button" onclick="openDataModal(&#39;United Kingdom Hydrographic Office&#39;, &#39;https://seabed.admiralty.co.uk&#39;)">
  Open data
</button>

      
    </div>

    <div class="govuk-tabs" data-module="govuk-tabs">
  <h2 class="govuk-tabs__title">
    Contents
  </h2>
  
  <ul class="govuk-tabs__list">
    
      
        
        <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
          <a class="govuk-tabs__tab" href="#general">
            General
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#access">
            Access
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#natural-capital">
            Natural Capital
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#quality">
            Quality
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#geography">
            Geography
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#governance">
            Governance
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#license">
            License
          </a>
        </li>
      
    
  </ul>
  
  
    
      
      <div class="govuk-tabs__panel" id="general">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Abstract</h2>
          
            <span class='tab-content-value'>
              This processed bathymetric data set has been derived from an Echosounder - multibeam survey. The source data was collected, validated and processed for the purpose of Safety Of Life At Sea (SOLAS). The data set must not be used for navigation or to create products that could be used for navigation.
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Study periods</h2>
          
            <span class='tab-content-value'>
              24 May 2019 to 31 Jul 2019
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Topic categories</h2>
          
            <span class='tab-content-value'>
              Elevation
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Keywords</h2>
          
            <span class='tab-content-value'>
              Elevation, Marine Environmental Data and Information Network, Bathymetry and Elevation
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Languages</h2>
          
            <span class='tab-content-value'>
              ENG
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="access">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue number</h2>
          
            <span class='tab-content-value'>
              fb8dca0f-7425-4f50-86a1-c4673b1aef88
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host catalogue number</h2>
          
            <span class='tab-content-value'>
              https://seabed.admiralty.co.uk fb8dca0f-7425-4f50-86a1-c4673b1aef88
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host catalogue entry</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Resource type and hierarchy</h2>
          
            <span class='tab-content-value'>
              dataset
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Hierarchy level</h2>
          
            <span class='tab-content-value'>
              Dataset
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Resource locators</h2>
          
            <span class='tab-content-value'>
              Download from Seabed Mapping Service (<a class="govuk-link" href="https://seabed.admiralty.co.uk" target="_blank">https://seabed.admiralty.co.uk</a>)
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="natural-capital">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="quality">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="geography">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="governance">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue number</h2>
          
            <span class='tab-content-value'>
              fb8dca0f-7425-4f50-86a1-c4673b1aef88
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host service catalogue number</h2>
          
            <span class='tab-content-value'>
              3ce46f92-509c-4529-a062-c8b48788340d
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA group reference</h2>
          
            <span class='tab-content-value'>
              fb8dca0f-7425-4f50-86a1-c4673b1aef88
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Metadata standard</h2>
          
            <span class='tab-content-value'>
              MEDIN
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Project number</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Metadata language</h2>
          
            <span class='tab-content-value'>
              eng
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue date</h2>
          
            <span class='tab-content-value'>
              16-Jan-2024
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="license">
        
      </div>
    
  
</div>


  

  <div id="modal" class="modal">
  <div class="modal-content">
    
  <div class='data-container'>
    <h1 class='govuk-heading-l data-container__heading-l govuk-!-margin-bottom-0'>You are about to leave Natural Capital Search Service</h1>
    <p class='govuk-body-l data-container__body-l govuk-!-margin-bottom-0'>You are following a link to an external catalogue hosted by:<br/>"<span id='resource_party'></span>"</p>
    <div class='govuk-button-group data-container__button-group govuk-!-margin-bottom-0'>
      
  

  
    
  

<button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" onclick="closeDataModal()">
  Cancel
</button>

      
  

  
    
  

<a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button" onclick="closeDataModal()" target="_blank" id="resource-locator-link">
  Open site
</a>

    </div>
  </div>

  </div>
</div>

        </main>
      </div>
    


    
  <footer class="govuk-footer" role="contentinfo">
  <div class="govuk-width-container">
    
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        
          <h2 class="govuk-visually-hidden">Support links</h2>
          
            <ul class="govuk-footer__inline-list">
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Help
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Privacy
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Cookies
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Accessibility statement
                  </a>
                </li>
              
            </ul>
          
          
        
        <svg
          aria-hidden="true"
          focusable="false"
          class="govuk-footer__licence-logo"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 483.2 195.7"
          height="17"
          width="41"
        >
          <path
            fill="currentColor"
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
          />
        </svg>
        <span class="govuk-footer__licence-description">
          
            All content is available under the
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >Open Government Licence v3.0</a>, except where otherwise stated
          
        </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >© Crown copyright</a>
      </div>
    </div>
  </div>
</footer>

  <div id="overlay" class="overlay"></div>


    
  
  
  <script type="module" src="/assets/all.js"></script>
  <script type="module">
    import {initAll} from '/assets/all.js'
    initAll()
  </script>
  <script>
    const appInsightsConnString = "";
  </script>
  <script type="text/javascript" src="/assets/scripts/appinsights.js"></script>
  <script type="module" src="/assets/scripts/customScripts.js"></script>
  <script type="module" src="/assets/scripts/fetchResults.js"></script>

  <script type="module" src="/assets/scripts/dataModal.js"></script>

  </body>
</html>
"
`;

exports[`Details route template Document details with partial data Check status code and snapshot should match the results screen snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template app-html-class">
  <head>
    <meta charset="utf-8">
    <title>
  Natural Capital Search Service - GOV.UK
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
  
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    


    
  <link rel="stylesheet" href="/assets/css/application.css">

    
  </head>
  <body class="govuk-template__body app-body-class">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    

    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  <header class="header-container">
    <div class="header-div-container header-main">
      <div class="site-width-container">
        <div class="header-logo-container"><img alt="Department for Environment Food &amp; Rural Affairs Logo" src="/assets/images/defra_logo.svg" width="52" height="42" decoding="async" data-nimg="1" class="defra-logo" loading="lazy" style="color:transparent">
          <a target="_blank" class="header-logo-link logo-link" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">
            <span class="defra-logo-text">Department for Environment <br> Food &amp; Rural Affairs</span></a>
          <span class="govuk-header__service-name">Natural Capital Search Service</span></div>
      </div>
    </div>
  </header>


    
  
      <div class="govuk-width-container">
        
  
  <div class="govuk-phase-banner">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      Beta
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
    </span>
  </p>
</div>



  

  
    
  

  <div class="govuk-breadcrumbs">
  <ol class="govuk-breadcrumbs__list">

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/" data-do-storage-reset="">Home</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/search">Search results</a>
    </li>
  

  
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="#">Geoserver WFS Fragments Country Boundaries Test Template</a>
    </li>
  

  </ol>
</div>


        <main class="govuk-main-wrapper app-main-class" id="main-content" role="main">
          
  
    
    
    
    <h1 class='govuk-heading-m details-title'>Geoserver WFS Fragments Country Boundaries Test Template</h1>

    <div >
      


  




  



  

  
    
  

<button type="submit" class="govuk-button govuk-!-margin-bottom-4" data-module="govuk-button" onclick="openDataModal(&#39;&#39;, &#39;https://seabed.admiralty.co.uk&#39;)">
  Open data
</button>

      
    </div>

    <div class="govuk-tabs" data-module="govuk-tabs">
  <h2 class="govuk-tabs__title">
    Contents
  </h2>
  
  <ul class="govuk-tabs__list">
    
      
        
        <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
          <a class="govuk-tabs__tab" href="#general">
            General
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#access">
            Access
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#natural-capital">
            Natural Capital
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#quality">
            Quality
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#geography">
            Geography
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#governance">
            Governance
          </a>
        </li>
      
    
      
        
        <li class="govuk-tabs__list-item">
          <a class="govuk-tabs__tab" href="#license">
            License
          </a>
        </li>
      
    
  </ul>
  
  
    
      
      <div class="govuk-tabs__panel" id="general">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Abstract</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Study periods</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Topic categories</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Keywords</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Languages</h2>
          
            <span class='tab-content-value'>
              ENG
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="access">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue number</h2>
          
            <span class='tab-content-value'>
              3c080cb6-2ed9-43e7-9323-9ce42b05b9a2
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host catalogue number</h2>
          
            <span class='tab-content-value'>
              https://seabed.admiralty.co.uk 3c080cb6-2ed9-43e7-9323-9ce42b05b9a2
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host catalogue entry</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Resource type and hierarchy</h2>
          
            <span class='tab-content-value'>
              dataset
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Hierarchy level</h2>
          
            <span class='tab-content-value'>
              Dataset
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Resource locators</h2>
          
            <span class='tab-content-value'>
              Download from Seabed Mapping Service (<a class="govuk-link" href="https://seabed.admiralty.co.uk" target="_blank">https://seabed.admiralty.co.uk</a>)
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="natural-capital">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="quality">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="geography">
        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="governance">
        
          
  <div class='tab-content-container'>
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue number</h2>
          
            <span class='tab-content-value'>
              3c080cb6-2ed9-43e7-9323-9ce42b05b9a2
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Host service catalogue number</h2>
          
            <span class='tab-content-value'>
              2fc172f5-4c8e-493b-8277-3492b3ed504c
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA group reference</h2>
          
            <span class='tab-content-value'>
              3c080cb6-2ed9-43e7-9323-9ce42b05b9a2
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Metadata standard</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Project number</h2>
          
            <strong class="govuk-tag govuk-tag--grey tab-content-value__not-provided">
  NOT PROVIDED
</strong>

          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>Metadata language</h2>
          
            <span class='tab-content-value'>
              eng
            </span>
          
        </div>
      
    
      
        <div class='tab-content-row'>
          <h2 class='tab-content-label'>NCEA catalogue date</h2>
          
            <span class='tab-content-value'>
              26-Jan-2010
            </span>
          
        </div>
      
    
  </div>

        
      </div>
    
  
    
      
      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="license">
        
      </div>
    
  
</div>


  

  <div id="modal" class="modal">
  <div class="modal-content">
    
  <div class='data-container'>
    <h1 class='govuk-heading-l data-container__heading-l govuk-!-margin-bottom-0'>You are about to leave Natural Capital Search Service</h1>
    <p class='govuk-body-l data-container__body-l govuk-!-margin-bottom-0'>You are following a link to an external catalogue hosted by:<br/>"<span id='resource_party'></span>"</p>
    <div class='govuk-button-group data-container__button-group govuk-!-margin-bottom-0'>
      
  

  
    
  

<button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" data-module="govuk-button" onclick="closeDataModal()">
  Cancel
</button>

      
  

  
    
  

<a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button" onclick="closeDataModal()" target="_blank" id="resource-locator-link">
  Open site
</a>

    </div>
  </div>

  </div>
</div>

        </main>
      </div>
    


    
  <footer class="govuk-footer" role="contentinfo">
  <div class="govuk-width-container">
    
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        
          <h2 class="govuk-visually-hidden">Support links</h2>
          
            <ul class="govuk-footer__inline-list">
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Help
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Privacy
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Cookies
                  </a>
                </li>
              
                <li class="govuk-footer__inline-list-item">
                  <a class="govuk-footer__link" href="#">
                    Accessibility statement
                  </a>
                </li>
              
            </ul>
          
          
        
        <svg
          aria-hidden="true"
          focusable="false"
          class="govuk-footer__licence-logo"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 483.2 195.7"
          height="17"
          width="41"
        >
          <path
            fill="currentColor"
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
          />
        </svg>
        <span class="govuk-footer__licence-description">
          
            All content is available under the
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >Open Government Licence v3.0</a>, except where otherwise stated
          
        </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >© Crown copyright</a>
      </div>
    </div>
  </div>
</footer>

  <div id="overlay" class="overlay"></div>


    
  
  
  <script type="module" src="/assets/all.js"></script>
  <script type="module">
    import {initAll} from '/assets/all.js'
    initAll()
  </script>
  <script>
    const appInsightsConnString = "";
  </script>
  <script type="text/javascript" src="/assets/scripts/appinsights.js"></script>
  <script type="module" src="/assets/scripts/customScripts.js"></script>
  <script type="module" src="/assets/scripts/fetchResults.js"></script>

  <script type="module" src="/assets/scripts/dataModal.js"></script>

  </body>
</html>
"
`;
